--- a/public/style.css
+++ b/public/style.css
@@ -35,6 +35,7 @@ form {
 
 .price {
     font-size: 1.2em;
+    margin-left: auto;
 }
 
 button {
@@ -53,6 +54,7 @@ button:hover {
 
 .btn-remove {
     background: lightcoral;
+    margin-left: 32px;
 }
 
 .btn-pay {
@@ -61,13 +63,27 @@ button:hover {
 
 .btn-preview {
     background: deepskyblue;
+    margin-left: auto;
 }
 
 .modal-content {
     position: relative;
     margin: 0 auto;
-    width: 63%;
-    height: 63%;
+    width: 71%;
+    height: 71%;
+
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s;
+
+    box-shadow: 0px 1px 10px rgba(0, 0, 0, .2);
+
+}
+
+@keyframes animatetop {
+    from { top:-100px; opacity:0 }
+    to { top:0; opacity:1 }
 }
 
 .btn-close {
@@ -77,6 +93,7 @@ button:hover {
     background: rgb(255, 64, 64);
     font-size: 1.3em;
     vertical-align: middle;
+    text-align: center;
     color: white;
     height: 42px;
     width: 42px;
@@ -93,5 +110,13 @@ button:hover {
     background: rgba(0, 0, 0, .8);
     display: none;
     align-items: center;
+    -webkit-animation-name: pop-modal;
+    -webkit-animation-duration: 0.4s;
+    animation-name: pop-modal;
+    animation-duration: 0.4s
+}
 
+@keyframes pop-modal {
+    from { opacity:0 }
+    to { opacity:1 }
 }
