--- a/src/client/style.css
+++ b/src/client/style.css
@@ -6,3 +6,36 @@ body {
     width: 100%;
     height: 100%;
 }
+
+.preloader-spinner {
+    margin: 0 auto;
+    border: 4px solid rgba(0, 0, 0, .1);
+    border-top: 4px solid white;
+    border-radius: 50%;
+    width: 2em;
+    height: 2em;
+    animation: spin .4s linear infinite;
+
+}
+
+#preloader-modal {
+    position: fixed; /* Stay in place */
+    z-index: 10; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background: black;
+    display: flex;
+    align-items: center;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
