--- a/src/client/style.css
+++ b/src/client/style.css
@@ -2,6 +2,25 @@ body {
     margin: 0;
 }
 
+h1 {
+    font-family: sans-serif;
+    font-size: 32px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+span {
+    display: block;
+    font-family: sans-serif;
+    margin-bottom: 12px;
+    font-size: 0.8em;
+    line-height: 1.8;
+}
+
+img {
+    margin-bottom: 12px;
+}
+
 #event-photo {
     width: 80%;
 }
@@ -12,14 +31,19 @@ body {
 }
 
 #event-info {
-    width: 20%; 
+    box-sizing: border-box;
+    width: 25%; 
     height: 100%;
+    padding: 18px;
     float: left;
-    background-color: aliceblue;
+    color: white;
+    background-color: rgb(22, 22, 22);
+    
 }
 
 #viewer {
-    margin-left: 20%;
+    width: 75%;
+    float: left;
 }
 
 .preloader-spinner {
