--- a/src/client/style.css
+++ b/src/client/style.css
@@ -32,6 +32,8 @@ img {
 
 #event-info {
     box-sizing: border-box;
+    overflow-y: scroll;
+    overflow-x: hidden;
     width: 25%; 
     height: 100%;
     padding: 18px;
